[issue:2500] Fixed bugs related to Nutzungen: 1) No new Nutzung could be added to NKFPanel 2) Nutzung could not be copied in NKFPanel 3) Wrong handling of copy failures